add hero section with background and basic content

--- a/index.html
+++ b/index.html
@@ -22,13 +22,24 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <section class="hero" id="home">
-        <div class="hero-content">
+<!-- Hero Section -->
+<section class="hero" id="home">
+    <div class="hero-content">
+        <!-- Animated Logo -->
+        <div class="logo-container">
             <h1>Karen Dwyer</h1>
-            <p>Bridal Hair & Color Artistry</p>
         </div>
-    </section>
+        
+        <p class="hero-subtitle">Senior Stylist & Color Specialist</p>
+        <p class="hero-description">
+            Creating stunning bridal transformations with over 20 years of expertise in hair styling, coloring, and extensions. Serving brides across the Southeast of Ireland.
+        </p>
+        <div class="cta-buttons">
+            <a href="#contact" class="btn btn-primary">Book Consultation</a>
+            <a href="#services" class="btn btn-secondary">View Services</a>
+        </div>
+    </div>
+</section>
 
     <!-- About Section -->
     <section class="section about" id="about">
