feat: add animated SVG logo with stroke-dasharray drawing

--- a/index.html
+++ b/index.html
@@ -1,77 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karen Dwyer - Bridal Hair & Color Artistry | New Ross, Co. Wexford</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Karen Dwyer - Bridal Hair & Color Artistry | New Ross, Co. Wexford
+    </title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
-        <div class="nav-container">
-            <a href="#" class="logo">Karen Dwyer</a>
-            <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
+      <div class="nav-container">
+        <a href="#" class="logo">Karen Dwyer</a>
+        <ul class="nav-links">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
     </nav>
 
-<!-- Hero Section -->
-<section class="hero" id="home">
-    <div class="hero-content">
+    <!-- Hero Section -->
+    <section class="hero" id="home">
+      <div class="hero-content">
         <!-- Animated Logo -->
         <div class="logo-container">
-            <h1>Karen Dwyer</h1>
+          <svg
+            id="animated-text"
+            viewBox="0 0 700 250"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <defs>
+              <linearGradient
+                id="goldGradient"
+                x1="0%"
+                y1="0%"
+                x2="100%"
+                y2="100%"
+              >
+                <stop offset="0%" stop-color="#E6C55A" />
+                <stop offset="50%" stop-color="#C8A22D" />
+                <stop offset="100%" stop-color="#A68B1F" />
+              </linearGradient>
+            </defs>
+
+            <text x="50" y="100" class="animated-text karen">Karen</text>
+            <text x="50" y="180" class="animated-text dwyer">Dwyer</text>
+          </svg>
         </div>
-        
+
         <p class="hero-subtitle">Senior Stylist & Color Specialist</p>
         <p class="hero-description">
-            Creating stunning bridal transformations with over 20 years of expertise in hair styling, coloring, and extensions. Serving brides across the Southeast of Ireland.
+          Creating stunning bridal transformations with over 20 years of
+          expertise in hair styling, coloring, and extensions. Serving brides
+          across the Southeast of Ireland.
         </p>
         <div class="cta-buttons">
-            <a href="#contact" class="btn btn-primary">Book Consultation</a>
-            <a href="#services" class="btn btn-secondary">View Services</a>
+          <a href="#contact" class="btn btn-primary">Book Consultation</a>
+          <a href="#services" class="btn btn-secondary">View Services</a>
         </div>
-    </div>
-</section>
+      </div>
+    </section>
 
     <!-- About Section -->
     <section class="section about" id="about">
-        <div class="container">
-            <h2>About Karen</h2>
-            <p>Content coming soon...</p>
-        </div>
+      <div class="container">
+        <h2>About Karen</h2>
+        <p>Content coming soon...</p>
+      </div>
     </section>
 
     <!-- Services Section -->
     <section class="section services" id="services">
-        <div class="container">
-            <h2>Services</h2>
-            <p>Content coming soon...</p>
-        </div>
+      <div class="container">
+        <h2>Services</h2>
+        <p>Content coming soon...</p>
+      </div>
     </section>
 
     <!-- Contact Section -->
     <section class="section contact" id="contact">
-        <div class="container">
-            <h2>Contact</h2>
-            <p>Content coming soon...</p>
-        </div>
+      <div class="container">
+        <h2>Contact</h2>
+        <p>Content coming soon...</p>
+      </div>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 Karen Dwyer Hair. All rights reserved.</p>
-        </div>
+      <div class="container">
+        <p>&copy; 2024 Karen Dwyer Hair. All rights reserved.</p>
+      </div>
     </footer>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
