--- a/index.html
+++ b/index.html
@@ -125,8 +125,67 @@
     <!-- Services Section -->
     <section class="section services" id="services">
       <div class="container">
-        <h2>Services</h2>
-        <p>Content coming soon...</p>
+        <div class="section-header">
+          <p class="section-subtitle">Services</p>
+          <h2 class="section-title">Comprehensive Bridal Beauty</h2>
+        </div>
+
+        <div class="services-grid">
+          <div class="service-card">
+            <div class="service-icon">
+              <i class="fas fa-crown"></i>
+            </div>
+            <h3 class="service-title">Bridal Styling</h3>
+            <p class="service-description">
+              Complete bridal hair styling services from initial consultation to
+              your wedding day, ensuring you look and feel absolutely perfect.
+            </p>
+            <ul class="service-features">
+              <li>Bridal consultations</li>
+              <li>Trial runs</li>
+              <li>Wedding day styling</li>
+              <li>Bridal party services</li>
+              <li>On-location styling</li>
+            </ul>
+          </div>
+
+          <div class="service-card">
+            <div class="service-icon">
+              <i class="fas fa-palette"></i>
+            </div>
+            <h3 class="service-title">Color Specialist</h3>
+            <p class="service-description">
+              Expert color services including highlights, balayage, color
+              correction, and complete transformations to achieve your dream
+              hair color.
+            </p>
+            <ul class="service-features">
+              <li>Color consultations</li>
+              <li>Balayage & highlights</li>
+              <li>Color correction</li>
+              <li>Root touch-ups</li>
+              <li>Glossing treatments</li>
+            </ul>
+          </div>
+
+          <div class="service-card">
+            <div class="service-icon">
+              <i class="fas fa-magic"></i>
+            </div>
+            <h3 class="service-title">Extensions & Volume</h3>
+            <p class="service-description">
+              Professional hair extension services to add length, volume, or
+              highlights, creating the perfect foundation for your bridal style.
+            </p>
+            <ul class="service-features">
+              <li>Tape-in extensions</li>
+              <li>Clip-in extensions</li>
+              <li>Volume solutions</li>
+              <li>Length additions</li>
+              <li>Color matching</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
 
