feat: implement contact section with booking form and contact details

--- a/index.html
+++ b/index.html
@@ -192,8 +192,118 @@
     <!-- Contact Section -->
     <section class="section contact" id="contact">
       <div class="container">
-        <h2>Contact</h2>
-        <p>Content coming soon...</p>
+        <div class="section-header">
+          <p class="section-subtitle">Get In Touch</p>
+          <h2 class="section-title">Book Your Consultation</h2>
+        </div>
+
+        <div class="contact-content">
+          <div class="contact-info">
+            <h3
+              style="
+                font-size: 2rem;
+                margin-bottom: 2rem;
+                color: var(--dark-charcoal);
+                font-weight: 600;
+              "
+            >
+              Let's Create Your Perfect Look
+            </h3>
+
+            <div class="contact-item">
+              <div class="contact-icon">
+                <i class="fas fa-map-marker-alt"></i>
+              </div>
+              <div class="contact-details">
+                <h4>Location</h4>
+                <p>New Ross, Co. Wexford<br />Serving Southeast Ireland</p>
+              </div>
+            </div>
+
+            <div class="contact-item">
+              <div class="contact-icon">
+                <i class="fas fa-phone"></i>
+              </div>
+              <div class="contact-details">
+                <h4>Phone</h4>
+                <p>+353 (0)51 XXX XXXX</p>
+              </div>
+            </div>
+
+            <div class="contact-item">
+              <div class="contact-icon">
+                <i class="fas fa-envelope"></i>
+              </div>
+              <div class="contact-details">
+                <h4>Email</h4>
+                <p>info@karendwyerhair.ie</p>
+              </div>
+            </div>
+
+            <div class="contact-item">
+              <div class="contact-icon">
+                <i class="fab fa-instagram"></i>
+              </div>
+              <div class="contact-details">
+                <h4>Follow My Work</h4>
+                <p>@karend_hair_</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="contact-form">
+            <h3
+              style="
+                font-size: 1.8rem;
+                margin-bottom: 2rem;
+                color: var(--dark-charcoal);
+                font-weight: 600;
+              "
+            >
+              Book Your Consultation
+            </h3>
+
+            <form>
+              <div class="form-group">
+                <label for="name">Full Name</label>
+                <input type="text" id="name" required />
+              </div>
+
+              <div class="form-group">
+                <label for="email">Email Address</label>
+                <input type="email" id="email" required />
+              </div>
+
+              <div class="form-group">
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" required />
+              </div>
+
+              <div class="form-group">
+                <label for="service">Service Interest</label>
+                <select id="service">
+                  <option>Bridal Consultation</option>
+                  <option>Color Services</option>
+                  <option>Extensions</option>
+                  <option>Trial Run</option>
+                  <option>Wedding Day Styling</option>
+                </select>
+              </div>
+
+              <div class="form-group">
+                <label for="message">Tell me about your vision</label>
+                <textarea
+                  id="message"
+                  placeholder="Describe your dream look, wedding date, or any questions you have..."
+                ></textarea>
+              </div>
+
+              <button type="submit" class="btn btn-primary" style="width: 100%">
+                Send Message
+              </button>
+            </form>
+          </div>
+        </div>
       </div>
     </section>
 
