--- a/index.html
+++ b/index.html
@@ -310,7 +310,46 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; 2024 Karen Dwyer Hair. All rights reserved.</p>
+        <div class="footer-content">
+          <div class="footer-section">
+            <h4>Karen Dwyer Hair</h4>
+            <p>
+              Senior stylist and color specialist creating beautiful bridal
+              transformations across Southeast Ireland.
+            </p>
+            <div class="social-links">
+              <a href="https://instagram.com/karend_hair_" target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-pinterest"></i></a>
+            </div>
+          </div>
+
+          <div class="footer-section">
+            <h4>Services</h4>
+            <p><a href="#services">Bridal Styling</a></p>
+            <p><a href="#services">Color Specialist</a></p>
+            <p><a href="#services">Extensions</a></p>
+            <p><a href="#services">Consultations</a></p>
+          </div>
+
+          <div class="footer-section">
+            <h4>Contact</h4>
+            <p>New Ross, Co. Wexford</p>
+            <p>+353 (0)51 XXX XXXX</p>
+            <p>
+              <a href="mailto:info@karendwyerhair.ie">info@karendwyerhair.ie</a>
+            </p>
+          </div>
+        </div>
+
+        <div class="footer-bottom">
+          <p>
+            &copy; 2024 Karen Dwyer Hair. All rights reserved. | Serving brides
+            across Southeast Ireland
+          </p>
+        </div>
       </div>
     </footer>
 
