performance improvements and polish

--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Karen Dwyer - Senior bridal hair stylist and color specialist in New Ross, Co. Wexford. 20+ years experience in bridal styling, color correction, and extensions."
+    />
+    <meta
+      name="keywords"
+      content="bridal hair, hair stylist, color specialist, New Ross, Wexford, Ireland, wedding hair, extensions"
+    />
+    <meta name="author" content="Karen Dwyer Hair" />
+    <meta
+      property="og:title"
+      content="Karen Dwyer - Bridal Hair & Color Artistry"
+    />
+    <meta
+      property="og:description"
+      content="Senior bridal hair stylist with 20+ years experience serving Southeast Ireland"
+    />
+    <meta property="og:type" content="website" />
     <title>
       Karen Dwyer - Bridal Hair & Color Artistry | New Ross, Co. Wexford
     </title>
