Add booking system with Calendly integration

--- a/index.html
+++ b/index.html
@@ -428,5 +428,7 @@
 
     <script src="script.js"></script>
     <script src="gallery.js"></script>
+    <script src="instagram.js"></script>
+    <script src="booking.js"></script>
   </body>
 </html>
